Improved ErrorMessages file

--- a/src/main/resources/Chat/Messages.yml
+++ b/src/main/resources/Chat/Messages.yml
@@ -5,20 +5,11 @@ Prefix: "&eEssentialsZ >> "
 first time join message: "&aWelcome &f%player% &ato the server! &6(#%total_amount%)"
 join message: "&a[+] &f%player%"
 quit message: "&4[-] &f%player%"
-Private Join Message:
-  - "Welcome to &6My Server!"
-  - "%player%"
-  - "Statistics:"
-  - "Ping: %ping%"
-  - "Server TPS: %tps%"
-  - "Current Balance: %bal%"
-  - "Players online: %online%"
 title message: "&a&lMY &f&lServer"
 subtitle message: "&4&lWelcome to &6&lSurvival"
 ClearChat Message: "&cChat has been cleared by &f%player%"
 Broadcast Prefix: "&6Broadcast >>"
-Broadcast Chat Muted: "Chat has been muted by %player%"
-Broadcast Chat Unmuted: "Chat has been unmuted by %player%"
+Broadcast Chat Muted: "Chat has been %setting% by %player%"
 Chat Muted: "&cThe chat is currently muted."
 Ping message: "&aYour current ping is %ping%"
 Ping Player message: "&a%player%'s current ping is %ping%"
@@ -26,6 +17,7 @@ Ping Player message: "&a%player%'s current ping is %ping%"
 # Economy Messages
 Payed: "&aYou have paid %amount% to %player%."
 Money Pouch Given: "&aYou have received a money pouch."
+Autosell Toggle: "&aYou have %setting% autosell."
 
 # Teleportation Messages
 TP message: "&aYou have teleported to %player%"
@@ -46,8 +38,7 @@ Create Warp: "&aYou have successfully created warp: %warp%."
 Remove Warp: "&aYou have successfully removed warp: %warp%."
 Warp Message: "&aYou have teleported to %warp%"
 Warp Player Message: "&aYou have teleported %player% to %warp%"
-Create Home: "&aYou have successfully created home: %home%"
-Remove Home: "&aYou have successfully removed home: %home%"
+Home: "&aYou have successfully %setting% home: %home%"
 Home Message: "&aYou have teleported to %home%"
 
 # World Messages
