--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
 name: EssentialsZ
-version: 1.3.0
+version: 1.4
 api-version: 1.16
 main: me.darkwinged.Essentials.Main
 authors: [darkwinged, Yovez]
 depend: [ProtocolLib]
-softdepend: [PlaceholderAPI]
+softdepend: [PlaceholderAPI, Vault]
 commands:
   economy:
     aliases:
@@ -21,6 +21,8 @@ commands:
       - with
       - wd
   pouches:
+  autosell:
+  sell:
 
   staffchat:
     aliases:
