--- a/src/main/resources/Chat/Messages.yml
+++ b/src/main/resources/Chat/Messages.yml
@@ -31,9 +31,6 @@ Random Teleport message: "&aYou have been teleported to a random location."
 Back Death Message: "&aYou can teleport back to your previous location using. /back"
 Back Message: "&aYou have teleported to your previous location."
 
-
-Set Spawn message: "&eSpawn has been set."
-Spawn Teleport message: "&aYou have been teleported to spawn."
 Create Warp: "&aYou have successfully created warp: %warp%."
 Remove Warp: "&aYou have successfully removed warp: %warp%."
 Warp Message: "&aYou have teleported to %warp%"
@@ -45,4 +42,12 @@ Home Message: "&aYou have teleported to %home%"
 Gamemode: "&aYou have changed your gamemode to %gamemode%."
 Gamemode Other: "&aYou have changed %player%'s gamemode to %gamemode%."
 Vanish: "&aYou have %setting% vanish."
-Clear Lag Message: "&a%entity_amount% items have been cleared.%n&7(( All items will be cleared again in %time% minutes. ))"
+Repair: "&aYou have repaired your item."
+Repair Chest: "&aYou have repaired all items inside of the chest."
+Repair Inventory: "&aYou have repaired all items inside of your inventory."
+One Player Sleep: "&aRise and shine."
+Already Day: "&cYou can only sleep at night."
+Kill Entities: "&aAll living entities have been killed."
+Kill Players: "&aAll Players have been killed."
+Killed Message: "You have killed %player%"
+God Mode: "You have %setting% god mode."
