pre economy re-write

--- a/pom.xml
+++ b/pom.xml
@@ -115,5 +115,19 @@
             <version>2.9.2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.darkwinged</groupId>
+            <artifactId>darkwinged</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>D:/EssentialsZ Project/EssentialsZ Spawn/target/EssentialsZSpawn-1.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.darkwinged</groupId>
+            <artifactId>darkwingedAPI</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>D:/EssentialsZ Project/EssentialsZ API/target/EssentialsZAPI-1.0.jar</systemPath>
+        </dependency>
     </dependencies>
 </project>
