--- a/src/main/resources/Chat/Messages.yml
+++ b/src/main/resources/Chat/Messages.yml
@@ -15,6 +15,10 @@ Ping message: "&aYour current ping is %ping%"
 Ping Player message: "&a%player%'s current ping is %ping%"
 
 # Economy Messages
+Economy Add Message: "&aYou have added %amount% to %player% balance."
+Economy Remove Message: "&aYou have taken %amount% to %player% balance."
+Economy Set Message: "&aYou have set %player% balance to %amount%."
+Economy Reset Message: "&aYou have reset %player% balance."
 Payed: "&aYou have paid %amount% to %player%."
 Money Pouch Given: "&aYou have received a money pouch."
 Autosell Toggle: "&aYou have %setting% autosell."
@@ -49,5 +53,11 @@ One Player Sleep: "&aRise and shine."
 Already Day: "&cYou can only sleep at night."
 Kill Entities: "&aAll living entities have been killed."
 Kill Players: "&aAll Players have been killed."
-Killed Message: "You have killed %player%"
-God Mode: "You have %setting% god mode."
+Killed Message: "&aYou have killed %player%"
+God Mode: "&aYou have %setting% god mode."
+Healed: "&aYou have been healed."
+Heal Other: "&aYou have healed %player%."
+Fly: "You have %setting% fly."
+Fly Other: "&aYou have %setting% fly for %player%."
+Feed: "&aYou have restored your hunger."
+Feed Other: "&aYou have restored %player% hunger."
