Fix Error with build

--- a/src/main/resources/Messages.yml
+++ b/src/main/resources/Messages.yml
@@ -60,3 +60,4 @@ Fly: "You have %setting% fly."
 Fly Other: "&aYou have %setting% fly for %player%."
 Feed: "&aYou have restored your hunger."
 Feed Other: "&aYou have restored %player% hunger."
+Smite: "&aYou have summoned a lightning strike on %target%"
