--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.darkwinged.EssentialsZ</groupId>
     <artifactId>EssentialsZ</artifactId>
-    <version>1.4</version>
+    <version>1.5</version>
     <packaging>jar</packaging>
 
     <name>EssentialsZ</name>
@@ -50,10 +50,14 @@
                                     <exclude>org.hamcrest:hamcrest-core</exclude>
                                     <exclude>net.md-5:bungeecord-chat</exclude>
                                     <exclude>commons-lang:commons-lang</exclude>
-                                    <exclude>com.google.code</exclude>
+                                    <exclude>com.google.code.gson:gson:jar:2.8.0</exclude>
                                     <exclude>com.google.guava</exclude>
                                     <exclude>net.bytebuddy:byte-buddy</exclude>
                                     <exclude>org.yaml:snakeyaml</exclude>
+                                    <exclude>org.bukkit:bukkit</exclude>
+                                    <exclude>com.googlecode.json-simple:json-simple:jar:1.1.1</exclude>
+                                    <exclude>junit</exclude>
+                                    <exclude>com.googlecode.json-simple</exclude>
                                 </excludes>
                             </artifactSet>
                         </configuration>
@@ -101,33 +105,32 @@
         <dependency>
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
-            <version>4.6.0</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>com.github.MilkBowl</groupId>
             <artifactId>VaultAPI</artifactId>
-            <version>1.7</version>
-            <scope>provided</scope>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
-            <version>2.9.2</version>
-            <scope>provided</scope>
+            <version>LATEST</version>
         </dependency>
+
         <dependency>
             <groupId>com.darkwinged</groupId>
-            <artifactId>darkwinged</artifactId>
-            <version>1.0</version>
+            <artifactId>darkwingedSpawn</artifactId>
+            <version>1.1</version>
             <scope>system</scope>
-            <systemPath>D:/EssentialsZ Project/EssentialsZ Spawn/target/EssentialsZSpawn-1.0.jar</systemPath>
+            <systemPath>D:/EssentialsZ Project/EssentialsZ Spawn/target/EssentialsZSpawn-1.1.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.darkwinged</groupId>
             <artifactId>darkwingedAPI</artifactId>
-            <version>1.0</version>
+            <version>1.1</version>
             <scope>system</scope>
-            <systemPath>D:/EssentialsZ Project/EssentialsZ API/target/EssentialsZAPI-1.0.jar</systemPath>
+            <systemPath>D:/EssentialsZ Project/EssentialsZ API/target/EssentialsZAPI-1.1.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
