--- a/src/main/resources/Messages.yml
+++ b/src/main/resources/Messages.yml
@@ -33,7 +33,9 @@ TP Other message: "&aYou have teleported %target% to %target2%"
 TP World message: "&aYou have been teleported to %world%"
 TP World Other message: "&aYou have teleported %player% to %world%"
 TP Cords message: "&aYou have teleported to %X%, %Y%, %Z%"
-TPhere message: "&aYou have teleported %player% tp yourself."
+TPhere message: "&aYou have teleported %target% to yourself."
+TPhere All message: "&aYou have teleported everyone to your location."
+TPhere All Entities message: "&aYou have teleported all entities to your location."
 Teleporting message: "&aYou will be teleported in %delay% seconds."
 Random Teleport message: "&aYou have been teleported to a random location."
 Back Death Message: "&aYou can teleport back to your previous location using. /back"
@@ -44,6 +46,9 @@ Warp Message: "&aYou have teleported to %warp%"
 Warp Player Message: "&aYou have teleported %player% to %warp%"
 Home: "&aYou have successfully %setting% home: %home%"
 Home Message: "&aYou have teleported to %home%"
+Set Spawn Message: "&aYou have successfully set spawn."
+Spawn Teleport Message: "&aYou are being teleported to spawn."
+Teleporting Message: "&aYou will be teleported in %delay% seconds."
 
 # World Messages
 Gamemode: "&aYou have changed your gamemode to %gamemode%."
@@ -66,3 +71,4 @@ Feed: "&aYou have restored your hunger."
 Feed Other: "&aYou have restored %player% hunger."
 Smite: "&aYou have summoned a lightning strike on %target%"
 TNT Filled: "&aYou have filled the dispensers with tnt."
+CPS: "&a%target%s highest clicks per second was, %cps% after %length% seconds."
