--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: EssentialsZ
-version: 1.5
+version: ${project.version}
 api-version: 1.13
 main: me.darkwinged.EssentialsZ.Main
 authors: [darkwinged, Yovez]
@@ -98,3 +98,4 @@ commands:
   feed:
   smite:
   filltnt:
+  cps:
